# needle

./: .gitignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-installers.yml
docs/: delete-acceptance.md  delete-ipc-spec.md  plan.md  project-overview.md
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src/domain/: aiClient.test.ts  aiClient.ts  aiSettings.test.ts  aiSettings.ts  bilibili.test.ts  bilibili.ts  bridge.test.ts  bridge.ts  candidateDisplay.test.ts  candidateDisplay.ts  candidates.test.ts  candidates.ts  chat.test.ts  chat.ts  chatScroll.test.ts  chatScroll.ts  debugLog.test.ts  debugLog.ts  delete.test.ts  delete.ts  deleteConfirm.test.ts  deleteConfirm.ts  errors.test.ts  errors.ts  layoutStyles.test.ts  musicLibrary.test.ts  musicLibrary.ts  playback.test.ts  playback.ts  ranking.test.ts  ranking.ts  rankingHarness.test.ts  rankingSamples.ts  searchStatus.test.ts  searchStatus.ts  songEditor.test.ts  songEditor.ts  songMetadata.test.ts  songMetadata.ts  tauriConfig.test.ts  (+2 more)
