[package]
name = "needle"
version = "0.1.0"
description = "AI local music assistant"
authors = ["Needle"]
edition = "2021"

[lib]
name = "needle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process"] }
urlencoding = "2"
